--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -20,7 +20,7 @@
 <body>
 
     <!--    Heder   -->
-    <div style="text-align: center" class="row">
+    <div style="text-align: -webkit-center" class="row">
         <div class="form-group">
             <label class="col-md-4 control-label"></label>
             <hr>
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-<div style="text-align: center" class="row">
+<div style="text-align: -webkit-center" class="row">
 
     <div class="column"></div>
 
