--- a/src/main/resources/templates/todo.html
+++ b/src/main/resources/templates/todo.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div style="text-align: center">
+<div style="text-align: -webkit-center">
     <h3>
         <span th:text="'Page is under development.'"></span>
     </h3>
