--- a/src/main/resources/templates/unauthorized.html
+++ b/src/main/resources/templates/unauthorized.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div style="text-align: center">
+<div style="text-align: -webkit-center">
     <h3>
         <td th:text="'Access denied for: ' + ${login}">Login</td>
     </h3>
