--- a/src/main/resources/templates/updateForAdmin.html
+++ b/src/main/resources/templates/updateForAdmin.html
@@ -10,7 +10,7 @@
           rel="stylesheet">
 </head>
 <body>
-<div style="text-align: center">
+<div style="text-align: -webkit-center">
 
     <div th:if="${exists}">
         <div class="alert alert-danger" role="alert">
