--- a/src/main/resources/templates/updatePayment.html
+++ b/src/main/resources/templates/updatePayment.html
@@ -168,7 +168,7 @@
         </div>
     </div>
 
-<!--<div style="text-align: center">-->
+<!--<div style="text-align: -webkit-center">-->
 
 <!--    <div th:if="${updated}">-->
 <!--        <div class="alert alert-primary" role="alert">-->
