--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -29,7 +29,7 @@
 </head>
 <body>
                                     <!--    Heder   -->
-    <div style="text-align: center" class="row">
+    <div style="text-align: -webkit-center" class="row">
         <div class="form-group">
             <label class="col-md-4 control-label"></label>
             <hr>
@@ -43,7 +43,7 @@
     </div>
 
                                     <!--    Main    -->
-    <div style="text-align: center" class="row">
+    <div style="text-align: -webkit-center" class="row">
 
         <div class="column-small"></div>
 
