Fully redesigned 'Settings' + initCategory for Customer

--- a/src/main/resources/templates/accountsStatistic.html
+++ b/src/main/resources/templates/accountsStatistic.html
@@ -32,8 +32,8 @@
             <hr>
             <div class="col-md-8">
                 <a class="btn btn-primary" href="/accounting" role="button">Accounting</a>
+                <a class="btn btn-primary" href="/settingsAccount" role="button">Settings Account</a>
                 <a class="btn btn-primary" href="/home" role="button">Home Page</a>
-                <a class="btn btn-primary" href="/settings" role="button">Settings</a>
             </div>
             <hr>
         </div>
