--- a/src/main/resources/templates/accounting.html
+++ b/src/main/resources/templates/accounting.html
@@ -34,42 +34,32 @@
     <div class="wrapper">
     <div class="split left">
         <div class="centered">
-            <form class="form-horizontal">
+            <form class="form-horizontal" th:action="@{/setPeriod}" method="POST">
                 <fieldset>
                 <!-- Buttons  -->
-                <div class="form-group">
-                  <label class="col-md-4 control-label" for="delete_payment"></label>
-                  <div class="d-grid gap-1 col-9 mx-auto">
-                    <a class="btn btn-success" href="/addNewPayment" role="button">Add Payment</a>
-                    <button type="submit" form="delete_payment" name="delete_payment" class="btn btn-danger">Delete Payment</button>
-                    <a class="btn btn-primary" href="/currencyExchange" role="button">Currency Exchange</a>
-                    <a class="btn btn-primary" href="/transfer" role="button">Transfer to Account</a>
-                    <a class="btn btn-primary" href="/accountsStatistic" role="button">Accounts Statistic</a>
-                    <a class="btn btn-primary" href="/settings" role="button">Settings</a>
-                    <a class="btn btn-primary" href="/home" role="button">Home Page</a>
-                  </div>
-                </div>
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="delete_payment"></label>
+                        <div class="d-grid gap-1 col-9 mx-auto">
+                            <a class="btn btn-success" href="/addNewPayment" role="button">Add Payment</a>
+                            <button type="submit" form="delete_payment" name="delete_payment" class="btn btn-danger">Delete Payment</button>
+                            <a class="btn btn-primary" href="/currencyExchange" role="button">Currency Exchange</a>
+                            <a class="btn btn-primary" href="/transfer" role="button">Transfer to Account</a>
+                            <a class="btn btn-primary" href="/accountsStatistic" role="button">Accounts Statistic</a>
+                            <a class="btn btn-primary" href="/settingsMain" role="button">Settings</a>
+                            <a class="btn btn-primary" href="/home" role="button">Home Page</a>
+                            <a class="btn btn-primary" href="/login?logout" role="button">Log out</a>
+                            <tr>
+                                <td>Start&nbspdate:</td><td style="text-align: right"><input type="date" id="startDate" name="startDate" th:value="${startDate}"/></td>
+                            </tr>
+                            <tr>
+                                <td>End&nbspdate:</td><td style="text-align: right"><input type="date" id="endDate" name="endDate" th:value="${endDate}"/></td>
+                            </tr>
+                              <button type="submit" class="btn btn-primary" role="button">Set period</button>
+                              <a class="btn btn-primary" href="/setPeriodToday" role="button">Set Today</a>
+                              <a class="btn btn-primary" href="/setPeriodMonth" role="button">Set This Month</a>
+                        </div>
+                    </div>
                 </fieldset>
-                </form>
-
-            <!-- Set period form  -->
-            <form class="form-horizontal" th:action="@{/setPeriod}" method="POST">
-                <div class="d-grid gap-1 col-9 mx-auto">
-                    <label></label>
-                    <table>
-                        <tr>
-                            <td>Start&nbspdate:</td><td style="text-align: right"><input type="date" id="startDate" name="startDate" th:value="${startDate}"/></td>
-                        </tr>
-                        <tr>
-                            <td>End&nbspdate:</td><td style="text-align: right"><input type="date" id="endDate" name="endDate" th:value="${endDate}"/></td>
-                        </tr>
-                    </table>
-                    
-                    <button type="submit" class="btn btn-primary">Set period</button>
-                    <a class="btn btn-primary" href="/setPeriodToday" role="button">Set Today</a>
-                    <a class="btn btn-primary" href="/setPeriodMonth" role="button">Set This Month</a>
-
-                </div>
             </form>
 
             <!-- Set Filters  -->
