--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -58,6 +58,16 @@
             text-align: center;
             margin: 0 0 0;
         }
+        
+        .form-container .msg-main{
+            color: #035000;
+            font-size: 20px;
+            font-weight: 500;
+            text-transform: none;
+            letter-spacing: 2px;
+            text-align: justify;
+            margin: 0 0 0;
+        }
 
         .form-container .form-horizontal .form-group{ margin: 0 0 25px 0; }
 
@@ -122,7 +132,18 @@
 
         <div class="col-md-4 offset-md-4">
             <div class="form-container">
+                <!-- <form class="form-horizontal input-margin" th:unless="${admin}">
+                    <h4 class="alert-success input-margin">Hello! Welcome to the</h4>
+                    <br>
+                </form> -->
+
                 <h3 class="title">Home accounting</h3>
+
+                <form class="form-horizontal" th:unless="${admin}">
+                    <h4 class="msg-main input-margin">Take control of your finances and manage your expenses with ease. 
+                        Start maintaining your budget, tracking your spending, and achieving your financial goals today.</h4>
+                </form>
+
                 <form class="form-horizontal" th:if="${admin}">
                     <br>
                     <a class="btn btn-danger" href="/admin" role="button">Go to Admin page</a>
@@ -133,7 +154,7 @@
                 </form>
                 <form class="form-horizontal" th:unless="${admin}">
                     <br>
-                    <a class="btn btn-primary" href="/settings" role="button">Settings</a>
+                    <a class="btn btn-primary" href="/settingsMain" role="button">Settings</a>
                 </form>
                 <form class="form-horizontal">
                     <br>
