--- a/src/main/resources/templates/addNewAccount.html
+++ b/src/main/resources/templates/addNewAccount.html
@@ -150,7 +150,7 @@
                 </form>
                 <br>
                 <form class="form-horizontal">
-                    <a class="btn btn-default" href="/settings" role="button">Cancel</a>
+                    <a class="btn btn-default" href="/settingsAccount" role="button">Cancel</a>
                 </form>
 
                 <br>
