--- a/src/main/resources/templates/updateCategory.html
+++ b/src/main/resources/templates/updateCategory.html
@@ -138,7 +138,7 @@
                 </form>
                 <br>
                 <form class="form-horizontal">
-                    <a class="btn btn-default" href="/settings" role="button">Cancel</a>
+                    <a class="btn btn-default" href="/settingsCategory" role="button">Cancel</a>
                 </form>
                 <br>
 
