--- a/src/main/resources/templates/addNewCategory.html
+++ b/src/main/resources/templates/addNewCategory.html
@@ -137,7 +137,7 @@
                 </form>
                 <br>
                 <form class="form-horizontal">
-                    <a class="btn btn-default" href="/settings" role="button">Cancel</a>
+                    <a class="btn btn-default" href="/settingsCategory" role="button">Cancel</a>
                 </form>
                 <br>
 
